# TensileLite

./: .gitignore  CMakeLists.txt  TensileLite.sln  TensileLite.vcxproj  TensileLite.vcxproj.filters  build.py
doc/: 480x1024 kernel analysis.pptx  480x512 kernel analysis.pptx  480x512 kernel analysis.xlsx  mfma gemm.pptx  mfma gemm.xlsx  性能.xlsx
ff_gpu_src/: ff_gpu.cpp  ff_gpu_test_fw.cpp  ff_hip_runtime.cpp  ff_utils.cpp
inc/: IsaGenerater.h  KernelWriter.h  KernelWriter_v2.h  ff_gpu.h  ff_hip_runtime.h  ff_utils.h
libproj/: lib_gpu.vcxproj  lib_gpu.vcxproj.filters  lib_utils.vcxproj  lib_utils.vcxproj.filters
proj/: TensileLite.vcxproj  TensileLite.vcxproj.filters
src/: HgemmMfma.cpp  HgemmMfma.h  HgemmMfmaKernelWriter.h  gemmMfma.cpp  gemmMfma.h  gemmMfmaKernelWriter.h  main.cpp  test.sh
test/: bfgemm_64x128.yaml  cpsrc.sh  gemm_perf_0325.xls  gemm_perf_0332.xls  gemm_perf_0412.xls  gemm_perf_0413.xls  gemm_test.sh  hfgemm_64x128.yaml  misc.txt  perf_test.py  perf_test_0325.xls  phantom_log.txt  phantom_perf_0331.xls  phantom_perf_0409.xls  phantom_perf_0414_1.xls  phantom_perf_0414_2.xls  phantom_perf_0417.xls  phantom_perf_0417_to_lds.xls  phantom_perf_0426_to_vgpr.xls  phantom_test.sh  test_log.txt  trans.txt  utc_preload_hitrate_0522.csv  utc_test.py
test/result data/: 0313_phantom_perf.xlsx  0325_gemm_perf.xls  0331_phantom_perf.xls  0332_gemm_perf.xls  0412_gemm_perf.xls  0413_gemm_perf.xls  0414_1_phantom_perf.xls  0414_2_phantom_perf.xls  0624_gemm_perf.xls  (+13 more)
ttrace/: 480x512_hgemm_MT32x64x64.out  480x512_hgemm_MT32x64x64_no_lds_read.out  pmc.txt
(+80 files in other folders)
